# bap

./: .git-blame-ignore-revs  .gitignore  bap-abi.opam  bap-analyze.opam  bap-api.opam  bap-arm.opam  bap-beagle-strings.opam  bap-beagle.opam  bap-bil.opam  bap-bml.opam  bap-build.opam  bap-bundle.opam  bap-byteweight-frontend.opam  bap-byteweight.opam  bap-c.opam  bap-cache.opam  bap-callgraph-collator.opam  bap-callsites.opam  bap-common.opam  bap-common.opam.template  bap-constant-tracker.opam  bap-core-theory.opam  bap-cxxfilt.opam  bap-demangle.opam  bap-dependencies.opam  bap-disassemble.opam  bap-dump-symbols.opam  bap-dwarf.opam  bap-elementary.opam  bap-elf.opam  bap-flatten.opam  bap-frontc.opam  bap-frontend.opam  bap-future.opam  bap-ghidra.opam  bap-glibc-runtime.opam  bap-ida-plugin.opam  bap-ida.opam  bap-knowledge.opam  bap-llvm.opam  (+66 more)
lib/bap_types/: bap_addr.ml  bap_addr.mli  bap_arch.ml  bap_arch.mli  bap_attributes.ml  bap_bil.ml  bap_bil_adt.ml  bap_bil_adt.mli  bap_bil_optimizations.ml  bap_bil_pass.ml  bap_bili.ml  bap_bili_types.ml  bap_biri.ml  bap_biri.mli  bap_biri_types.ml  bap_bitvector.ml  bap_bitvector.mli  bap_common_types.ml  bap_context.ml  bap_context.mli  bap_core_theory_bil_parser.ml  bap_core_theory_bil_parser.mli  bap_eval.ml  bap_eval_types.ml  bap_exp.ml  bap_exp.mli  bap_expi.ml  bap_expi.mli  bap_expi_types.ml  bap_helpers.ml  bap_helpers.mli  bap_int_conversions.ml  bap_int_conversions.mli  bap_integer.ml  bap_integer.mli  bap_integer_intf.ml  bap_interval_tree.ml  bap_interval_tree.mli  bap_ir.ml  bap_ir.mli  (+36 more)
plugins/arm/: dune  (+2 more)
(+921 files in other folders)
